# burrow

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  mix.exs
.github/workflows/: release.yml
client/: Cargo.toml  README.md
client/src/: config.rs  error.rs  main.rs
client/src/client/: connection.rs  http_proxy.rs  mod.rs  ws_proxy.rs
client/src/client/tui/: events.rs  mod.rs  ui.rs
client/src/crypto/: attestation.rs  keypair.rs  mod.rs
client/src/protocol/: ids.rs  messages.rs  mod.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: burrow.ex
lib/burrow/: accounts.ex  application.ex  cluster_monitor.ex  release.ex  repo.ex  ulid.ex  webauthn.ex
lib/burrow/acme/: certificate_manager.ex  client.ex  renewal_worker.ex  store.ex  supervisor.ex
lib/burrow/acme/challenge/: dns01.ex  http01.ex
lib/burrow/acme/dns/: cloudflare.ex
lib/burrow/crypto/: attestation.ex  keypair.ex
lib/burrow/protocol/: codec.ex  fields.ex  message.ex
lib/burrow/queries/: request_query.ex  unknown_request_query.ex
lib/burrow/schemas/: api_token.ex  request.ex  subdomain_reservation.ex  unknown_request.ex  user.ex  webauthn_credential.ex
lib/burrow/server/: control_handler.ex  dispatcher.ex  error_page.ex  ip_lookup.ex  landing_page.ex  pending_requests.ex  request_forwarder.ex  request_store.ex  subdomain.ex  supervisor.ex  tcp_listener.ex  tcp_proxy.ex  tcp_registry.ex  tunnel_endpoint.ex  tunnel_registry.ex  tunnel_socket.ex  ws_proxy.ex  ws_registry.ex
lib/burrow/server/web/: endpoint.ex  error_html.ex  layouts.ex  router.ex
lib/burrow/server/web/controllers/: auth_controller.ex  page_controller.ex  session_controller.ex  subdomain_controller.ex
lib/burrow/server/web/layouts/: root.html.heex
lib/burrow/server/web/live/account_live/: index.ex
lib/burrow/server/web/live/auth_live/: login.ex  register.ex
lib/burrow/server/web/live/inspector_live/: index.ex  login.ex  show.ex  unauthorized.ex
lib/burrow/server/web/plugs/: api_auth.ex  require_auth.ex  tunnel_control.ex
lib/burrow/workers/: ip_lookup_worker.ex
priv/repo/migrations/: 20260117000001_create_requests_table.exs  20260117000002_create_unknown_requests_table.exs  20260117000003_add_oban_jobs.exs  20260124000001_create_users_table.exs  20260124000002_create_webauthn_credentials_table.exs  20260124000003_create_api_tokens_table.exs  20260124000004_create_subdomain_reservations_table.exs  20260124000005_add_is_admin_to_users.exs
rel/: env.sh.eex
test/burrow/: ulid_test.exs
test/burrow/acme/: client_test.exs  store_test.exs
test/burrow/acme/challenge/: http01_test.exs
test/burrow/crypto/: attestation_test.exs  keypair_test.exs
test/burrow/protocol/: codec_test.exs  message_test.exs
test/burrow/server/: endpoint_test.exs  pending_requests_test.exs  subdomain_test.exs  supervisor_test.exs  tunnel_registry_test.exs  tunnel_socket_test.exs
test/support/: data_case.ex
